--- a/codesandbox_training/react-search/src/App.css
+++ b/codesandbox_training/react-search/src/App.css
@@ -26,17 +26,17 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
-.component-users-results{
-  padding-top: 50px;
-}
+
+
 .component-user-row{
   border-bottom: 1px solid #ccc;
   padding: 2px;
   height: 50px;
-  position: relative;
+  /*position: relative;*/
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   /*cursor: pointer;*/
   text-align: left;
+
 }
 
 .component-user-row:hover{
@@ -44,7 +44,6 @@
 }
 
 .component-user-row .user-name   {
-  /*float: right;*/
   position: relative;
   bottom: 5px;
   right: 10px;
@@ -61,6 +60,26 @@
   height: 40px;
   padding-right: 15px;
   padding-top: 5px;
+
+}
+
+.button-block{
+  float: right;
+  padding-top: 20px;
+  position: relative;
+}
+
+.component-search-input{
+  float: left;
+  position: relative;
+  padding-top:20px;
+}
+
+.component-users-results{
+  position: relative;
+  clear: both;
+  padding-top: 20px;
+
 }
 
 label{
@@ -68,15 +87,32 @@ label{
   color: darkgrey;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   padding: 20px;
-  float: left;
 }
+
+
 input{
   background-color: #eeeeee;
   box-shadow: darkgrey;
-  float: left;
+  height: 25px;
 }
 button{
   position: relative;
-  float: right;
+  display: inline-block;
+  width: 8em;
+  font-size: 80%;
+  color: rgba(255,255,255,.9);
+  text-shadow: #2e7ebd 0 1px 2px;
+  text-decoration: none;
+  text-align: center;
+  line-height: 1.1;
+  white-space: pre-line;
+  padding: .7em 0;
+  border: 1px solid;
+  border-color: #60a3d8 #2970a9 #2970a9 #60a3d8;
+  border-radius: 6px;
+  outline: none;
+  background: #60a3d8 linear-gradient(#89bbe2, #60a3d8 50%, #378bce);
+  box-shadow: inset rgba(255,255,255,.5) 1px 1px;
 }
+
 
