--- a/egghead/test-0918/src/components/back-to.css
+++ b/egghead/test-0918/src/components/back-to.css
@@ -7,14 +7,15 @@
         /*height: 50px;*/
     /*}*/
 
-    .back-to  {
+    .back-to .btn-secondary {
         /*width: 80%;*/
         /*height: 50px;*/
         font-size: 16px;
         line-height: 2.78;
         text-align: left;
-        color: black;
+        color: red;
         position: relative;
         /*top: 100px;*/
         /* left: 100px; */
     }
+
