--- a/egghead/test-0918/src/components/game/square.css
+++ b/egghead/test-0918/src/components/game/square.css
@@ -14,7 +14,7 @@
   }
   .game {
     display: flex;
-    /* flex-direction: row; */
+    flex-direction: column;
   } 
   .game-board {
     margin: auto;
