--- a/egghead/test-0918/src/index.css
+++ b/egghead/test-0918/src/index.css
@@ -112,3 +112,33 @@ form {
   text-align: center;
   font-size: 15px;
 }
+.table-price {
+  font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+  font-size: 14px;
+  width: 660px;
+  background: white;
+  text-align: left;
+  border-collapse: collapse;
+  color: #3E4347;
+}
+
+/* .table-price  thead:first-child, 
+.table-price  td:first-child {
+  color: #F5F6F6;
+  border-left: none;
+  } */
+
+.table-price thead tr{
+  font-weight: normal;
+  border-bottom: 2px solid #F5E1A6;
+  border-right: 20px solid white;
+  border-left: 20px solid white;
+  padding: 8px 10px;
+  }
+
+  .table-price td {
+    border-right: 20px solid white;
+    border-left: 20px solid white;
+    padding: 12px 10px;
+    color: #8b8e91;
+    }
