--- a/egghead/test-0918/src/components/game/square.css
+++ b/egghead/test-0918/src/components/game/square.css
@@ -6,8 +6,7 @@
     font-weight: bold;
     line-height: 34px;
     height: 34px;
-    margin-right: -1px;
-    margin-top: -1px;
+    margin: -1px -1px 0 0;
     padding: 0;
     text-align: center;
     width: 34px;
