--- a/src/pages/slider.css
+++ b/src/pages/slider.css
@@ -119,10 +119,21 @@ ul {
 }
 .address-table, 
 .map-container{
-  border: 1px solid black;
+  /* border: 1px solid black; */
   margin: 10px;
+}
+.address-table{
+  width:50%
 }
 .map-container{
   width: 100%;
   height: 500px;
+  border: 2px solid rgb(173, 173, 173);
+  padding: 10px;
+}
+.map-pointer{
+  color: rgb(5, 7, 114);
+  background: url("http://ruralshores.com/assets/marker-icon.png") no-repeat 50% 50%;
+  width: 40px;
+  height: 40px;
 }
