--- a/src/index.css
+++ b/src/index.css
@@ -1,63 +1,20 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-.menu,
-#home > ul {
-  list-style: none;
-  margin: 0px;
-}
-ul {
-  padding-inline-start: 0px;
-}
-.menu li a {
-  text-decoration: none;
-}
-.menu li {
-  padding: 5px 5px 5px 25px;
-  border-bottom: 1px solid lightblue;
-  min-width: 50px;
-  margin-top: 1px;
-  background-color: aliceblue;
-  text-align: left;
-  position: relative;
-}
-.menu .multilevel li:first-child{
-  margin-top: 10px;
-  
-}
-.menu .sub-menu li{
-  border-bottom: 0px;
-  padding-left: 50px;
-}
-.main-block {
-  display: flex;
-}
-.main-block .menu {
-  width: 20%;
-}
-.sub-menu{
-  display: none;
-}
-
-li:hover>.sub-menu{
-  display: unset;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 .component {
   width: 80%;
 }
+
 form {
   display: flex;
   flex-direction: column;
@@ -125,7 +82,7 @@ form {
   font-size: 15px;
 }
 .table-price {
-  font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+  font-family: 'Lucida Sans Unicode', 'Lucida Grande', Sans-Serif;
   font-size: 18px;
   width: 660px;
   background: white;
