--- a/src/courses/egghead/build_first_react_app/src/toDo.css
+++ b/src/courses/egghead/build_first_react_app/src/toDo.css
@@ -28,3 +28,12 @@ li {
   margin-bottom: 20px;
   text-align: center;
 }
+.success {
+  position: absolute;
+  margin-top: auto;
+  border: 2px solid lightgrey;
+  width: 300px;
+  padding: 10px 10px 10px 10px;
+  border-radius: 10px;
+  background-color: aliceblue;
+}
